--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="bg-primary">
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
-                <a class="navbar-brand" href="#">Dero studios</a>
+                <a class="navbar-brand" href="#">Dan Hermes RO.</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
                     aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
